Implement Interface List for players and question lists and adjust further implementation